# ChangeLog for app-crypt/pinentry
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.96 2009/07/15 21:04:10 arfrever Exp $

  15 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pinentry-0.7.6.ebuild:
  Disable support for Qt-4 when "static" USE flag is enabled (bug #277963).

  04 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pinentry-0.7.6.ebuild, -files/pinentry-0.7.6-qt4-moc-fix.diff:
  Properly regenerate .moc files.

*pinentry-0.7.6 (04 Jul 2009)

  04 Jul 2009; Sven Wegener <swegener@gentoo.org> +pinentry-0.7.6.ebuild,
  +files/pinentry-0.7.6-qt4-moc-fix.diff:
  Version bump, bug #274999 by Lars Wendler.

  02 May 2009; Sven Wegener <swegener@gentoo.org> pinentry-0.7.5.ebuild,
  pinentry-0.7.5-r1.ebuild:
  Migrate gtk to slot dependency, bug #268218.

*pinentry-0.7.5-r1 (22 Jan 2009)

  22 Jan 2009; Sven Wegener <swegener@gentoo.org> +pinentry-0.7.5-r1.ebuild:
  Add support for the static USE flag, bug #247770.

  06 Jan 2009; Sven Wegener <swegener@gentoo.org>
  -files/pinentry-0.7.2-grab.patch, -files/0.7.2-info.patch,
  -files/pinentry-0.7.4-grab.patch, -files/0.7.2-libcap.patch,
  -pinentry-0.7.3.ebuild, -pinentry-0.7.4-r1.ebuild:
  Cleanup.

  27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> pinentry-0.7.3.ebuild,
  pinentry-0.7.4-r1.ebuild, pinentry-0.7.5.ebuild:
  QA: Get rid of deprecated qt_min_version().

  18 Jun 2008; Jeroen Roovers <jer@gentoo.org> pinentry-0.7.5.ebuild:
  Stable for HPPA (bug #217845).

  12 May 2008; Markus Rothe <corsair@gentoo.org> pinentry-0.7.5.ebuild:
  Stable on ppc64

  03 May 2008; Richard Freeman <rich0@gentoo.org> pinentry-0.7.5.ebuild:
  amd64 stable - 217845

  17 Apr 2008; nixnut <nixnut@gentoo.org> pinentry-0.7.5.ebuild:
  Stable on ppc wrt bug 217845

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> pinentry-0.7.5.ebuild:
  ia64/sparc/x86 stable wrt #217845
