@@ -6,8 +6,8 @@ AUX pinentry-0.7.5-grab.patch 536 RMD160 66f86ff0c8c208ec62de1dea2b2c3edeca41d0f
 AUX pinentry-gmem.patch 880 RMD160 82c41513e47be43a801ec0d2e6cf89857b5e373f SHA1 34abb7caa0aecbd4d8f592695c30e40311425688 SHA256 484dafa00a7fe6e04380d32f3a468082d68923c11f8e3fb007e09018b4b617f5
 DIST pinentry-0.7.5.tar.gz 422801 RMD160 4ed9d06981b647f9fd39b9d30651a36307869c2d SHA1 6699a1ff94c649e8905199d480c6412cc43bad3d SHA256 cb269ac058793b2df343a12a65e3402abc4b68503e105b12e4ca903d8d8e3172
 DIST pinentry-0.7.6.tar.gz 475101 RMD160 6e69eee88b5cbb919ced79971cd4794f5e659023 SHA1 0c525ce81e5589bc9a4f2eb72705bed2b3e9a8b9 SHA256 14670c18f4a042ffcbd7a937aa3f15de392816c56b472588383d8378f65b42ab
-EBUILD pinentry-0.7.5-r1.ebuild 2612 RMD160 54bd0929ace197e0384e9901387b387f489375df SHA1 b0016ef12c6f381b736f782080c8d4cb39923df4 SHA256 04f38f5db9a19c344c4a245bff71ab96bf0cbd3019d9750dfdf2b8161dcc424f
-EBUILD pinentry-0.7.5.ebuild 2137 RMD160 137f6c9bb503f1443a82e67b8ba0246846df7750 SHA1 8095335b42a449e0b5d4862abdf5594273285c1c SHA256 b684c9303386229f96ea331644c6287c418ef75d7baef9a96d738418c2665646
-EBUILD pinentry-0.7.6.ebuild 2840 RMD160 c13f66bf52c2d8607a15dcc19bd93b3a141207c6 SHA1 fdd317e0d32693ae0f761beb4bfe0b5c1507fcaf SHA256 08643b25b7fe0975c0611b2b2b7d4e59d6f2c1a8b2bb69d027a297ad54a57b02
-MISC ChangeLog 12884 RMD160 bc9bbaf9714fb39eadd0c072cdf3a40917e82734 SHA1 c3f1088636e98f617b1abcb4b5c262bf97413fac SHA256 e369123b50d1f4c4b750e5bc4b7cd25326e0975c1cd6803804d47963970734a1
+EBUILD pinentry-0.7.5-r1.ebuild 2419 RMD160 dac1417ed1578772823fa9d32af1a992338f1654 SHA1 0ccb9a24cc19c7081b75477775467039b925035c SHA256 cba9e15e4dc54c8fdcb8ae3b3ca448e6e154303c4c93c16c5b6a4e41c9bb2245
+EBUILD pinentry-0.7.5.ebuild 1967 RMD160 11328c55026ff4c70eefac9282a0653ecf23d004 SHA1 0253fa844af3d3c814879a25e694567149ed1120 SHA256 df24b86022dfd531cd6e71f1deab258c2df95f5a112a478cbac77dae875c042c
+EBUILD pinentry-0.7.6.ebuild 2762 RMD160 4af85eef7e9f7da3170916fe16d238a905f01bad SHA1 4ab7a844724c867a3cd12e7a6152e19565b8344f SHA256 f8842283bd5e3b29df5347d6ea03b794579aa80de75f4e97583a8d444ff7f7e1
+MISC ChangeLog 13024 RMD160 93a52b8302666fd883784a6abababe54a2c9a02b SHA1 020a7ef65d3bb37d4a410c1ba35133fad728c90f SHA256 926c9dcb4a5f104a9d4cbedf329893cd5e5aed3603a28c843771e388fc868730
 MISC metadata.xml 275 RMD160 7aca4724ede81b0eaad9b4536f00a6a805727cef SHA1 b1a92ff0d6bfacd26122ac4dbd4725ef2b023f81 SHA256 1e9c7343efc06a4d4143421f4bf3740c30f71ed6ce5011231505e7e911f31548
