@@ -1,10 +1,10 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/pinentry-0.7.5.ebuild,v 1.11 2009/05/02 20:34:01 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/pinentry-0.7.5.ebuild,v 1.12 2010/01/02 21:46:50 yngwin Exp $
 
 EAPI=1
 
-inherit qt3 multilib eutils
+inherit multilib eutils
 
 DESCRIPTION="Collection of simple PIN or passphrase entry dialogs which utilize the Assuan protocol"
 HOMEPAGE="http://www.gnupg.org/aegypten/"
@@ -13,12 +13,11 @@ SRC_URI="mirror://gnupg/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
-IUSE="gtk ncurses qt3 caps"
+IUSE="gtk ncurses caps"
 
 DEPEND="gtk? ( x11-libs/gtk+:2 )
 	ncurses? ( sys-libs/ncurses )
-	qt3? ( x11-libs/qt:3 )
-	!gtk? ( !qt3? ( !ncurses? ( sys-libs/ncurses ) ) )
+	!gtk? ( !ncurses? ( sys-libs/ncurses ) )
 	caps? ( sys-libs/libcap )"
 RDEPEND="${DEPEND}"
 
@@ -33,25 +32,21 @@ src_unpack() {
 src_compile() {
 	local myconf=""
 
-	if ! ( use qt3 || use gtk || use ncurses )
+	if ! ( use gtk || use ncurses )
 	then
 		myconf="--enable-pinentry-curses --enable-fallback-curses"
 	fi
-
-	# Issues finding qt on multilib systems
-	export QTLIB="${QTDIR}/$(get_libdir)"
 
 	econf \
 		--disable-dependency-tracking \
 		--enable-maintainer-mode \
 		--disable-pinentry-gtk \
 		$(use_enable gtk pinentry-gtk2) \
-		$(use_enable qt3 pinentry-qt) \
+		--disable-pinentry-qt \
 		$(use_enable ncurses pinentry-curses) \
 		$(use_enable ncurses fallback-curses) \
 		$(use_with caps libcap) \
-		${myconf} \
-		|| die "econf failed"
+		${myconf}
 	emake || die "emake failed"
 }
 
