@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/pinentry
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.96 2009/07/15 21:04:10 arfrever Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.97 2010/01/02 21:46:50 yngwin Exp $
+
+  02 Jan 2010; Ben de Groot <yngwin@gentoo.org> pinentry-0.7.5.ebuild,
+  pinentry-0.7.5-r1.ebuild, pinentry-0.7.6.ebuild:
+  Drop qt3 support
 
   15 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   pinentry-0.7.6.ebuild:
